Fixed enter game button not working on mobile

--- a/src/components/EnterCode/enterCode.scss
+++ b/src/components/EnterCode/enterCode.scss
@@ -90,6 +90,10 @@
 
 @media only screen and (max-width: 1024px) {
 
+    .enterCode-div {
+        z-index: 5;
+    }
+
     .display-enterCode {
        height: 25%;
        width: 80%;
