--- a/src/components/Sheet/sheet.scss
+++ b/src/components/Sheet/sheet.scss
@@ -23,7 +23,7 @@
     margin-left: 35vw;
     margin-top: 40vh;
     height: 13vh;
-    z-index: 10;
+    z-index: 2;
     opacity: 0;
 }
 
