--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@ body {
   display: flex;
   background-color: rgb(44, 43, 43);
   overflow-x: hidden;
-  overflow-y: hidden;
   margin: 0;
 }
 
